feat(soul-blazer): Add Data Structures wiki and integrate palette manager
- Create comprehensive Data Structures wiki page (440+ lines)
  - 4BPP tile format documentation
  - Palette format (15-bit BGR)
  - Tilemap format with attributes
  - OAM and metasprite formats
  - Entity structure (32-byte slots)
  - Soul Lair data format
  - Player stats block (52 bytes)
  - Text encoding table
  - SRAM save format
  - Pointer table formats
  - RLE and LZ compression documentation

- Integrate palette_manager.py into map_viewer.py
  - Import PaletteManager for extracted palette data
  - Auto-apply area palettes on selection
  - Add palette selection dialog
  - Add View menu options for palette switching
  - Display palette count in info panel

- Update main wiki page with Data Structures section

Related to #90

--- a/Games/SNES/Soul Blazer (SNES)/Wiki/Soul Blazer.wikitext
+++ b/Games/SNES/Soul Blazer (SNES)/Wiki/Soul Blazer.wikitext
@@ -85,6 +85,18 @@ Soul Blazer uses a mostly ASCII-based text encoding with control codes for dialo
 ==Data Tables==
 {{Main|Soul Blazer:Data tables}}
 
+==Data Structures==
+{{Main|Soul Blazer:Data structures}}
+
+Comprehensive documentation of binary formats including:
+* 4BPP graphics tiles and palettes
+* Tilemap format with attributes
+* Entity structure (32-byte slots)
+* Soul Lair data format
+* Player stats block
+* SRAM save file format
+* Compression formats (RLE, LZ)
+
 ==Enemies==
 {{Main|Soul Blazer:Enemies}}
 
